# sliphub

./: .ocamlformat  README.md  dune-project  sliphub.opam
.github/workflows/: build.yaml
assets/: assets.ml  assets.mli  data_files.ml  data_files.mli  dune  intro_presentation.md
client/collab/: collab_protocol.ml  collab_protocol.mli  comm_machine.ml  comm_machine.mli  communication.ml  communication.mli  dune
common/: dune  routes.ml  routes.mli
gui/slipshow-gui/: package-lock.json  package.json
gui/slipshow-gui/src/: dune  include.js  include2.js  index.html  styles.css
gui/slipshow-gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/slipshow-gui/src-tauri/src/: main.rs
lib/: dune
server/lib/: change_notifications.ml  change_notifications.mli  communication.ml  converter.ml  db.ml  db.mli  dune
test/: dune
