
(rule
 (deps %{project_root}/client/bin/client.bc.js)
 (target "index.js")
 (action
  (copy %{deps} %{target})))

(rule
 (deps %{project_root}/client/bin/index.html)
 (target "index.html")
 (action
  (copy %{deps} %{target})))

(rule
 (deps %{project_root}/client/bin/index.css)
 (target "index.css")
 (action
  (copy %{deps} %{target})))

(rule
 (aliases runtest data-files)
 (target data_contents.ml)
 (deps
   (file "index.js")
   (file "index.html")
   (file "index.css")
  (glob_files *.js)
  (glob_files *.md)
  (glob_files *.css))
 (action
  (setenv
    SOURCE_DATE_EPOCH
    0
   (run
     ocaml-crunch
     .
     -e
     js
     -e
     css
     -e
     html
     -e
     md
     -o
     data_contents.ml
     -m
     plain
     -s))))

(library
 (name assets)
 (public_name sliphub.datafiles))
